More dillo action

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 
 
     background-color: coral; 
+    background-image: url(https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQ6QbvIXTTK3ZYzy9ZJlSpe7yg4MpFyyRR4OSt43_3wqlkVk6xjfUFS_ZiDGgMjMW3M4WAEX077-viUEkc);
     font-size: 100%;
     font-family: "Lucida Console", "Courier New", monospace;
 }
